--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -26,5 +26,6 @@
   "diagram": "diagram",
   "language": "language",
   "english": "english",
-  "german": "german"
+  "german": "german",
+  "color": "color"
 }
