--- a/assets/assets/translation/de.json
+++ b/assets/assets/translation/de.json
@@ -26,5 +26,6 @@
   "diagram": "Diagramm",
   "language": "Sprache",
   "english": "Englisch",
-  "german": "Deutsch"
+  "german": "Deutsch",
+  "color": "Farbe"
 }
