--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,16 +1,15 @@
 {
   "forLoop": "for loop",
   "ifStatement": "if statement",
-  "instruction": "instruction",
   "caseStatement": "case statement",
   "whileLoop": "while loop",
   "doWhileLoop": "do while loop",
-  "StructType.loop": "loop",
-  "StructType.ifSelect": "if statement",
-  "StructType.instruction": "instruction",
-  "StructType.caseSelect": "case statement",
-  "StructType.repeat": "do while loop",
-  "StructType.function": "function",
+  "loop": "loop",
+  "ifSelect": "if statement",
+  "instruction": "instruction",
+  "caseSelect": "case statement",
+  "repeat": "do while loop",
+  "function": "function",
   "copy": "copy",
   "paste": "paste",
   "delete": "delete",
@@ -34,5 +33,6 @@
   "english": "english",
   "german": "german",
   "color": "color",
-  "importFromCode": "import from code"
+  "importFromCode": "import from code",
+  "fillColor": "fill color"
 }
